...
                    options={{ tabBarLabel: 'Estoque' }}
                />
            ) : null}
            <Tab.Screen
                name="More"
                component={MoreScreen}
                options={{ tabBarLabel: 'Mais', tabBarBadge: moreBadge }}
            />
        </Tab.Navigator>
    );
}

